--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -8,9 +8,9 @@
 
 name: Upload Python Package
 
-on: push
-  # release:
-  #   types: [published]
+# on: push
+  release:
+    types: [published]
 
 permissions:
   contents: read
